# portable-hnsw

./: README.md  build_index.py  index.html  jason.css  pyproject.toml
frankenstein/: docs.parquet  edges.parquet  frankenstein.txt  nodes.parquet
shakespeare/: docs.parquet  edges.parquet  nodes.parquet
