[tool.poetry]
name = "portable-hnsw"
version = "0.1.0"
description = ""
authors = ["Jason McGhee <mcghee.j@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
sentence-transformers = "^2.2.2"
pandas = "^2.1.3"
pyarrow = "^14.0.1"
numba = "^0.58.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
